@@ -1,3 +1,7 @@
+2004-09-30  Martin Schaffner  <maschaffner@gmx.ch>
+
+	* cfile/cfile.c: simplify, reduce number of global vars
+
 2004-09-05  Chris Taylor  <c.taylor@student.curtin.edu.au>
 
 	* main/gameseg.c: fix bugfix of 2004-05-15
